lib/tests/fixtures/compiler/evaluation/new_outofrange_integer.pp
notice Integer('9223372036854775808')
